removed JimpleView and use JavaView with JimpleAnalysisInputLocation