@@ -25,7 +25,6 @@ package sootup.java.core.views;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.jspecify.annotations.NonNull;
 import sootup.core.cache.ClassCache;
@@ -33,6 +32,7 @@ import sootup.core.cache.FullCache;
 import sootup.core.cache.provider.ClassCacheProvider;
 import sootup.core.cache.provider.FullCacheProvider;
 import sootup.core.frontend.AbstractClassSource;
+import sootup.core.frontend.OverridingClassSource;
 import sootup.core.inputlocation.AnalysisInputLocation;
 import sootup.core.model.SootClass;
 import sootup.core.signatures.FieldSignature;
@@ -92,7 +92,7 @@ public class JavaView extends AbstractView {
             .flatMap(
                 location -> {
                   // TODO: [ms] find a way to not stream().collect().stream()
-                  return location.getClassSources(this).collect(Collectors.toList()).stream();
+                  return location.getClassSources(this).toList().stream();
                 })
             .map(this::buildClassFrom);
 
@@ -164,10 +164,18 @@ public class JavaView extends AbstractView {
     if (cache.hasClass(classType)) {
       theClass = (JavaSootClass) cache.getClass(classType);
     } else {
-      theClass =
-          (JavaSootClass)
-              classSource.buildClass(classSource.getAnalysisInputLocation().getSourceType());
-      cache.putClass(classType, theClass);
+      if (classSource instanceof OverridingClassSource) {
+        theClass =
+            new JavaSootClass(
+                (OverridingClassSource) classSource,
+                classSource.getAnalysisInputLocation().getSourceType());
+        cache.putClass(classType, theClass);
+      } else {
+        theClass =
+            (JavaSootClass)
+                classSource.buildClass(classSource.getAnalysisInputLocation().getSourceType());
+        cache.putClass(classType, theClass);
+      }
     }
     return theClass;
   }
